@startuml banco

hide circle
skinparam linetype ortho

entity tb_aluno {
    * id : int <<PK>>
    --
    * nome : varchar(100)
    * endereco : varchar(200)
    * telefone : varchar(11)
    * data_nascimento : date
}

entity tb_curso {
    * id : int <<PK>>
    --
    * nome : varchar(100)
    * descricao : varchar(200)
    * carga_horaria : int
    * data_inicio : date
    * data_fim : date
}

entity tb_turma {
    * id : int <<PK>>
    --
    * nome : varchar(100)
    * id_curso : int <<FK>>
}

entity tb_matricula {
    * id : int <<PK>>
    --
    * id_aluno : int <<FK>>
    * id_turma : int <<FK>>
    * data_matricula : date
}

tb_curso ||--o{ tb_turma : possui
tb_aluno ||--o{ tb_matricula : possui
tb_turma ||--o{ tb_matricula : possui
@enduml